--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,6 @@
 language: python
-matrix:
-    include:
-        - python: 3.7
-          dist: xenial
-          sudo: true
+python:
+    -"3.6"
 
 services:
     - docker
@@ -11,4 +8,4 @@ services:
 before_script: pip install docker-compose
 
 script:
-    -docker-compose run app sh -c "python manage.py test && flake8"
+    -docker-compose run --rm app sh -c "python manage.py test && flake8"
